# kinopoisk_bot_rust

./: .env  .gitignore  Cargo.toml  README.md
src/: handlers.rs  main.rs
