[package]
name = "kinopoisk_bot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.18"
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
log = "0.4.19"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
uuid = "1.3.4"
serde = { version = "1.0.164", features = ["derive"] }
dotenv = "0.15.0"
