[package]
name = "kinopoisk_bot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.22"
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
log = "0.4.20"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.4.1"
serde = { version = "1.0.188", features = ["derive"] }
dotenv = "0.15.0"
