[package]
name = "kinopoisk_bot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
log = "0.4.21"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.8.0"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
